@@ -2,13 +2,15 @@ Ships:
 
 -Made recoverable:
 Alauda, Brave Blade, every BB ship that isn't a station (no Preceptor or Acolyte), Wild Goose
--Added Alauda as a one-time spawn in prism (I think)
+-Added Alauda as a one-time spawn in prism
+-Puddle Jumper and Sevastopol mk1 variants have regained their tags and are now obtainable again
+(their tags were forgotten when they wer converted to skins)
 
 Weapons:
 
 -Linear cannon line efficiency changed (sizes, S/M/L) from 1.0 to 0.85/0.9/1.0
 -Large linear cannon regains on-hit
--Long-rod penetrator type weapons efficiency increased by at least 0.1, depending on the weapon
+-Long-rod penetrator type weapons efficiency changed to 1.1, 1.2 for the Whistler Jetrifle as that is a burst weapon
 -Restricted tag removed from BB guns, bathe in useful drop rates
 -Restricted tag removed from Assault Rail Accelerator
 
