@@ -9,6 +9,6 @@
     {
         "major":1,
         "minor":0,
-        "patch":0 # Can be a number, character or string (1, 2, a, b, "-RC2", etc)
+        "patch":1 # Can be a number, character or string (1, 2, a, b, "-RC2", etc)
     }
 }
