@@ -2,7 +2,7 @@
   "id":"DMEGR",
   "name":"Assault-Mikoyan Gun Realignment",
   "author":"that one guy",
-  "version":"1.0.0",
+  "version":"1.0.1",
   "description":"Makes the update palatable",
   "gameVersion":"0.95a-RC15",
   "jars":["jars/DMEGR.jar"],
