@@ -2,5 +2,6 @@
 
 -Restricted tag removed from Assault Rail Accelerator
 -Puddle Jumper and Sevastopol mk1 variants have regained their tags and are now obtainable again
+(their tags were forgotten when they wer converted to skins)
 -BB assault hullmod description is now accurate
--Added Alauda as a one-time spawn in prism (I think)
+-Added Alauda as a one-time spawn in prism
